import 'package:flutter/material.dart';

class ChatCreateViewModel extends ChangeNotifier {
  ChatCreateViewModel();

// Future<void> onSignInButtonPressed(BuildContext context) async {
//   Navigator.pushReplacementNamed(context, '/events');
// }
}
