import 'package:flutter/material.dart';

class ChatViewModel extends ChangeNotifier {
  ChatViewModel();

// Future<void> onSignInButtonPressed(BuildContext context) async {
//   Navigator.pushReplacementNamed(context, '/events');
// }
}
